--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 /* Global styles */
 body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
-    background-color: #f5f3d8;
+    background-color: #f5f5f1;
     color: #1d2a62;
 }
 
@@ -41,7 +42,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #f5f3d8;
+    color: #a8a68b;
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 5px;
@@ -72,19 +73,6 @@ main {
     margin-bottom: 30px;
 }
 
-.btn {
-    display: inline-block;
-    background-color: #437118;
-    color: #f5f3d8;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-    background-color: #6aa21e;
-}
 
 .features {
     padding: 40px 0;
@@ -113,4 +101,55 @@ footer {
     color: #f5f3d8;
     padding: 10px 0;
     text-align: center;
+}
+
+/* Dashboard styles */
+.dashboard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.box {
+    flex: 1 1 300px; /* Flexbox properties */
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.box:hover {
+    transform: translateY(-5px);
+}
+
+.box h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #1d2a62;
+}
+
+.central-section {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.central-section h1 {
+    font-size: 3rem;
+    margin-bottom: 10px;
+}
+
+.calorie-info {
+    background-color: #7a9f77;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.calorie-info h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
 }
