--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@ header h1 {
     font-size: 2.5rem;
     text-align: center;
 }
-
+nav {
+    margin-top: 25px; 
+}
 nav ul {
     list-style-type: none;
     text-align: center;
@@ -113,7 +115,7 @@ footer {
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 225px;
 }
 
 .box {
