--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
 
 header {
     background-color: #1d2a62;
-    color: #f5f3d8;
+    color: #ffffff;
     padding: 10px 0;
 }
 
@@ -30,9 +30,12 @@ header h1 {
     font-size: 2.5rem;
     text-align: center;
 }
+
 nav {
-    margin-top: 25px; 
+    background-color: #384e3c;
+    height: 55px;
 }
+
 nav ul {
     list-style-type: none;
     text-align: center;
@@ -103,7 +106,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #1d2a62;
+    background-color: #1d623d;
     color: #f5f3d8;
     padding: 10px 0;
     text-align: center;
