--- a/css/login.css
+++ b/css/login.css
@@ -53,7 +53,7 @@ form button {
 }
 
 form button:hover {
-    background-color: #384e3c;
+    background-color: #1d2a62c5;
 }
 .container {
     max-width: 800px;
