--- a/css/login.css
+++ b/css/login.css
@@ -1,18 +1,40 @@
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 75vh; 
-    padding: 10px 0;
+
+.tab {
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+
+.tab button {
+    background-color: #f0f0f0;
+    color: #1d2a62;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    transition: background-color 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ccc;
+}
+
+.tabcontent {
+    display: none;
+    padding: 20px;
+}
+
+.tabcontent.active {
+    display: block;
 }
 
 form {
-    width: 100%;
-    max-width: 400px;
     background-color: #ffffff;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 form h2 {
@@ -30,7 +52,7 @@ form label {
 
 form input[type="email"],
 form input[type="password"] {
-    width: 100%;
+    width: calc(100% - 24px);
     padding: 12px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
@@ -55,13 +77,8 @@ form button {
 form button:hover {
     background-color: #1d2a62c5;
 }
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 20px; 
-}
 
-.container h2 {
-    text-align: center; 
-    color: #1d2a62;
+form p {
+    margin-top: 10px;
+    color: #ff0000;
 }
