--- a/css/login.css
+++ b/css/login.css
@@ -1,84 +1,67 @@
-
-.tab {
-    overflow: hidden;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 20px;
-}
-
-.tab button {
-    background-color: #f0f0f0;
-    color: #1d2a62;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 10px 20px;
-    transition: background-color 0.3s;
-}
-
-.tab button:hover {
-    background-color: #ccc;
-}
-
-.tabcontent {
+#check:checked ~ .registration{
+    display: block;
+  }
+.container .registration{
     display: none;
-    padding: 20px;
-}
+  }
 
-.tabcontent.active {
-    display: block;
-}
-
-form {
-    background-color: #ffffff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    margin: 0 auto;
-}
-
-form h2 {
+#check{
+    display: none;
+  }
+#check:checked ~ .login{
+    display: none;
+  }
+.container .form{
+    padding: 2rem;
+  }
+.form header{
     font-size: 2rem;
-    margin-bottom: 20px;
+    font-weight: 500;
     text-align: center;
-    color: #1d2a62;
-}
-
-form label {
-    display: block;
-    margin-bottom: 8px;
-    color: #333;
-}
-
-form input[type="email"],
-form input[type="password"] {
-    width: calc(100% - 24px);
-    padding: 12px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    font-size: 1rem;
-}
-
-form button {
-    display: block;
-    width: 100%;
-    padding: 12px;
-    background-color: #1d2a62;
-    color: #ffffff;
-    border: none;
-    border-radius: 5px;
+    margin-bottom: 1.5rem;
+  }
+.form input{
+     height: 60px;
+     width: 100%;
+     padding: 0 15px;
+     font-size: 19px;
+     margin-bottom: 1.9rem;
+     border: 3px solid #c9c7c793;
+     border-radius: 5px;
+     outline: none;
+   }
+.form input:focus{
+     box-shadow: 0 1px 0 rgba(0,0,0,0.2);
+   }
+.form a{
+    font-size: 16px;
+    color: #5a515b;
+    text-decoration: none;
+  }
+.form a:hover{
+    text-decoration: underline;
+  }
+.form input.button{
+    color: #fcebeb;
+    background: #009579;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-top: 1.7rem;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    font-size: 1rem;
-}
-
-form button:hover {
-    background-color: #1d2a62c5;
-}
-
-form p {
-    margin-top: 10px;
-    color: #ff0000;
-}
+    transition: 0.3s;
+  }
+form input.button:hover{
+    background: #606065;
+  }
+.signup label:hover{
+    text-decoration: underline;
+  }
+.signup{
+    font-size: 15px;
+    text-align: center;
+  }
+.signup label{
+    color: #0047e0;
+    cursor: pointer;
+  }
